--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 							placeholder="Maximum 300 characters"
 						></textarea>
 					</fieldset>
-					<input class="submit-button" type="submit" value="Send" />
+					<input class="submit-button" type="submit" aria-label="Send" value="Send" />
 				</form>
 			</div>
 		</div>
